--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.4",
+    "joi": "^14.0.4",
+    "joi-objectid": "^2.0.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.11"
   }
 }
