--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --verbose",
+    "start":"node index.js",
+    "build":"npm build"
+  },
+  "engines": {
+    "node": "9.0.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "compression": "^1.7.3",
     "config": "^2.0.1",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "joi": "^14.0.4",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
@@ -19,5 +26,9 @@
     "mongoose": "^5.3.11",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0"
   }
 }
